Bluetooth: Remove duplicate files from Apps, Fix CPU loading
Rearchitected SW to remove duplicate files from Camera, Contacts, and Music
applications. These applications now use common files in Bluetooth app
to implement OPP client.

Changes progess handler in BluetoothOppActivity to remove superfluous
update to progress dialog. This update to the progress dialog created
extra CPU loading.

CRs-fixed: 194583 195279